--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style: none; }
+  list-style: none;
+}
 
 :root {
   --color-primary: #191d2b;
@@ -17,20 +18,23 @@
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
-  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3); }
+  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+}
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: var(--color-primary);
   font-size: 1.1rem;
   color: var(--color-white);
-  transition: all .4s ease-in-out; }
+  transition: all 0.4s ease-in-out;
+}
 
 a {
   display: inline-block;
   text-decoration: none;
   color: inherit;
-  font-family: inherit; }
+  font-family: inherit;
+}
 
 section {
   min-height: 100vh;
@@ -38,32 +42,61 @@ section {
   position: absolute;
   left: 0;
   right: 0;
-  padding: 3rem 18rem; }
+  padding: 3rem 18rem;
+}
 
 .section {
   transform: translateY(-100%) scale(0);
-  transition: all .4s ease-in-out;
-  background-color: var(--color-primary); }
+  transition: all 0.4s ease-in-out;
+  background-color: var(--color-primary);
+}
 
 .sec1 {
   display: none;
-  transform: translateY(0) scale(1); }
+  transform: translateY(0) scale(1);
+}
 
 .sec2 {
   display: none;
-  transform: translateY(0) scale(1); }
+  transform: translateY(0) scale(1);
+}
 
 .sec3 {
   display: none;
-  transform: translateY(0) scale(1); }
+  transform: translateY(0) scale(1);
+}
 
 .sec4 {
   display: none;
-  transform: translateY(0) scale(1); }
+  transform: translateY(0) scale(1);
+}
 
 .sec5 {
   display: none;
-  transform: translateY(0) scale(1); }
+  transform: translateY(0) scale(1);
+}
+
+.active {
+  display: block;
+  -webkit-animation: scaleAnim 1s ease-in-out;
+          animation: scaleAnim 1s ease-in-out;
+}
+@-webkit-keyframes scaleAnim {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
+@keyframes scaleAnim {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
 
 .controlls {
   position: fixed;
@@ -74,27 +107,72 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transform: translateY(-50%); }
-  .controlls .active-btn {
-    background-color: var(--color-secondary) !important;
-    transition: all .4s ease-in-out; }
-    .controlls .active-btn i {
-      color: var(--color-white) !important; }
-  .controlls .control {
-    padding: 1rem;
-    cursor: pointer;
-    background-color: var(--color-grey-4);
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: .7rem 0;
-    box-shadow: var(--box-shadow-1); }
-    .controlls .control i {
-      font-size: 1.2rem;
-      color: var(--color-grey-2);
-      pointer-events: none; }
+  transform: translateY(-50%);
+}
+.controlls .active-btn {
+  background-color: var(--color-secondary) !important;
+  transition: all 0.4s ease-in-out;
+}
+.controlls .active-btn i {
+  color: var(--color-white) !important;
+}
+.controlls .control {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: var(--color-grey-4);
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.7rem 0;
+  box-shadow: var(--box-shadow-1);
+}
+.controlls .control i {
+  font-size: 1.2rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}
 
-/*# sourceMappingURL=styles.css.map */
+.header-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+}
+.header-content .left-header {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.header-content .left-header .h-shape {
+  transition: all 0.4s ease-in-out;
+  width: 65%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  -webkit-clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+          clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+}
+.header-content .left-header .image {
+  border-radius: var(--br-sm-2);
+  height: 90%;
+  width: 68%;
+  margin-left: 4rem;
+  background-color: var(--color-black);
+  transition: all 0.4s ease-in-out;
+}
+.header-content .left-header .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.4s ease-in-out;
+  filter: grayscale(100%);
+}
+.header-content .left-header .image img:hover {
+  filter: grayscale(0);
+}/*# sourceMappingURL=styles.css.map */
