--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -87,6 +87,22 @@ section
 	transform: translateY(0) scale(1);
 }
 
+.active
+{
+	display: block;
+	//Animation
+	animation: scaleAnim 1s ease-in-out;
+	@keyframes scaleAnim {
+		0% {
+			transform: translateY(-100%) scaleY(0);
+		}
+
+		100% {
+			transform: translateY(0) scaleY(1);
+		}
+	}
+}
+
 .controlls
 {
 	position: fixed;
@@ -128,3 +144,51 @@ section
 		}
 	}
 }
+
+// === Header ===
+
+// Content
+.header-content {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	height: 100%;
+	.left-header{
+		display: flex;
+		align-items: center;
+		position: relative;
+		.h-shape {
+			transition: all .4s ease-in-out;
+			width: 65%;
+			height: 100%;
+			background-color: var(--color-secondary);
+			position: absolute;
+			left: 0;
+			top: 0;
+			z-index: -1;
+			clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+		}
+		.image {
+			border-radius: var(--br-sm-2);
+			height: 90%;
+			width: 68%;
+			margin-left: 4rem;
+			background-color: var(--color-black);
+			transition: all .4s ease-in-out;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				transition: all .4s ease-in-out;
+				filter: grayscale(100%);
+				&:hover {
+					filter: grayscale(0);
+				}
+			}
+		}
+	}
+}
+
+// Independent components
+
+
+// ==============
