--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #27AE60;
+  --color-secondary: #2e86c1;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -18,13 +18,14 @@
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
-  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+  --h-shape: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
 .light-mode {
   --color-primary: #FFFFFF;
-  --color-secondary: #F56692;
-  --color-white: #454e56;
+  --color-secondary: #dc7633;
+  --color-white: #485158;
   --color-black: #000;
   --color-grey0: #f8f8f8;
   --color-grey-1: #6c7983;
@@ -34,7 +35,8 @@
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
-  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+  --h-shape: linear-gradient(to right, #fa709a 0%, #fee140 100%);
 }
 
 body {
@@ -50,6 +52,13 @@ a {
   text-decoration: none;
   color: inherit;
   font-family: inherit;
+}
+
+header {
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+  color: var(--color-white);
+  overflow: hidden;
 }
 
 section {
@@ -131,12 +140,12 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .controlls .active-btn i {
-  color: var(--color-white) !important;
+  color: #FFFFFF !important;
 }
 .controlls .control {
   padding: 1rem;
   cursor: pointer;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-grey-5);
   width: 55px;
   height: 55px;
   border-radius: 50%;
@@ -158,7 +167,7 @@ section {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-grey-5);
   cursor: pointer;
   position: fixed;
   display: flex;
@@ -182,16 +191,16 @@ section {
   position: relative;
 }
 .header-content .left-header .h-shape {
-  transition: all 0.4s ease-in-out;
   width: 65%;
   height: 100%;
-  background-color: var(--color-secondary);
+  background-image: var(--h-shape);
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
   -webkit-clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
           clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+  transition: all 0.4s ease-in-out;
 }
 .header-content .left-header .image {
   border-radius: var(--br-sm-2);
@@ -537,7 +546,8 @@ section {
 .contact-content-con .right-contact .input-control {
   margin: 1.5rem 0;
 }
-.contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
+.contact-content-con .right-contact .input-control input,
+.contact-content-con .right-contact .input-control textarea {
   border-radius: 30px;
   font-weight: inherit;
   font-size: inherit;
@@ -629,4 +639,155 @@ section {
   transform: translate(-50%, -50%);
   font-weight: 1000;
   font-size: 6.3rem;
+}
+
+@media screen and (max-width: 800px) {
+  header {
+    padding: 0;
+  }
+  header .right-header {
+    padding: 0 !important;
+  }
+  .theme-btn {
+    width: 50px;
+    height: 50px;
+  }
+  .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .right-header {
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .right-header .name {
+    font-size: 2.5rem !important;
+  }
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
+  .about-timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .about-stats .stats-skills {
+    grid-template-columns: 1fr;
+  }
+  .about-stats .stats-skills .about-item .abt-text {
+    text-align: center;
+  }
+  .portfolios {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .contact-content-con {
+    flex-direction: column;
+  }
+  .contact-content-con .right-contact {
+    margin-left: 0;
+    margin-top: 2.5rem;
+  }
+  .contact-content-con .right-contact .i-c-2 {
+    flex-direction: column;
+  }
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+  .section {
+    padding: 2rem 2.5rem;
+  }
+  .main-title h3 {
+    font-size: 2rem;
+  }
+  .main-title h3 span {
+    font-size: 2.5rem;
+  }
+  .main-title h3 .bg-text {
+    font-size: 3rem;
+  }
+  .controlls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controlls .control {
+    margin: 0.6rem 1rem !important;
+  }
+}
+@media screen and (max-width: 1430px) {
+  header {
+    padding: 0 !important;
+  }
+  .section {
+    padding: 2.5rem 9rem;
+  }
+  .contact-content-con {
+    flex-direction: column;
+  }
+  .contact-content-con .right-contact {
+    margin-left: 0;
+    margin-top: 2.5rem;
+  }
+  .contact-content-con .right-contact .i-c-2 {
+    flex-direction: column;
+  }
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+  .main-btn {
+    margin-bottom: 5rem;
+  }
+}
+@media screen and (max-width: 1230px) {
+  .header-content .right-header {
+    padding-right: 8rem;
+  }
+}
+@media screen and (max-width: 1100px) and (min-width: 800px) {
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    padding-top: 2.5rem;
+  }
+  .main-title h2 {
+    font-size: 4rem;
+  }
+  .main-title h2 span {
+    font-size: 4rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 4.5rem;
+  }
+  .portfolios {
+    grid-template-columns: 1fr 1fr;
+  }
+  .about-stats .stats-skills {
+    grid-template-columns: 1fr 1fr;
+  }
 }/*# sourceMappingURL=styles.css.map */
