--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,15 +1,20 @@
-* 
-{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	list-style: none; 
+	list-style: none;
 }
 
-:root
-{
+$color-1: #2e86c1;
+$color-2: #6c3483;
+$color-3: #d4e6f1;
+$color-4: #dc7633;
+$color-5: #3498db;
+$color-6: #DAF7A6;
+
+:root {
 	--color-primary: #191d2b;
-	--color-secondary: #27AE60;
+	--color-secondary: #2e86c1;
 	--color-white: #FFFFFF;
 	--color-black: #000;
 	--color-grey0: #f8f8f8;
@@ -20,27 +25,28 @@
 	--color-grey-5: #2a2e35;
 	--color-grey-6: #12181b;
 	--br-sm-2: 14px;
-	--box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+	--box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+	--h-shape: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
 .light-mode {
-	--color-primary  : #FFFFFF;
-	--color-secondary: #F56692;
-	--color-white    : #454e56;
-	--color-black    : #000;
-	--color-grey0    : #f8f8f8;
-	--color-grey-1   : #6c7983;
-	--color-grey-2   : #6c7983;
-	--color-grey-3   : #6c7983;
-	--color-grey-4   : #454e56;
-	--color-grey-5   : #f8f8f8;
-	--color-grey-6   : #12181b;
-	--br-sm-2        : 14px;
-	--box-shadow-1   : 0 3px 15px rgba(0,0,0,.3);
+	--color-primary: #FFFFFF;
+	--color-secondary: #dc7633;
+	--color-white: #485158;
+	--color-black: #000;
+	--color-grey0: #f8f8f8;
+	--color-grey-1: #6c7983;
+	--color-grey-2: #6c7983;
+	--color-grey-3: #6c7983;
+	--color-grey-4: #454e56;
+	--color-grey-5: #f8f8f8;
+	--color-grey-6: #12181b;
+	--br-sm-2: 14px;
+	--box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+	--h-shape: linear-gradient(to right, #fa709a 0%, #fee140 100%);;
 }
 
-body 
-{
+body {
 	font-family: 'Poppins', sans-serif;
 	background-color: var(--color-primary);
 	font-size: 1.1rem;
@@ -48,16 +54,21 @@ body
 	transition: all .4s ease-in-out;
 }
 
-a
-{
+a {
 	display: inline-block;
 	text-decoration: none;
 	color: inherit;
 	font-family: inherit;
 }
 
-section
-{
+header {
+	min-height: 100vh;
+	font-family: 'Poppins', sans-serif;
+	color: var(--color-white);
+	overflow: hidden;
+}
+
+section {
 	min-height: 100vh;
 	width: 100%;
 	position: absolute;
@@ -66,50 +77,44 @@ section
 	padding: 3rem 18rem;
 }
 
-.section
-{
+.section {
 	transform: translateY(-100%) scale(0);
 	transition: all .4s ease-in-out;
 	background-color: var(--color-primary);
 }
 
-.sec1
-{
+.sec1 {
 	display: none;
 	transform: translateY(0) scale(1);
 }
 
-.sec2
-{
+.sec2 {
 	display: none;
 	// z-index: -2;
 	transform: translateY(0) scale(1);
 }
 
-.sec3
-{
+.sec3 {
 	display: none;
 	transform: translateY(0) scale(1);
 }
 
-.sec4
-{
+.sec4 {
 	display: none;
 	transform: translateY(0) scale(1);
 }
 
-.sec5
-{
+.sec5 {
 	display: none;
 	transform: translateY(0) scale(1);
 }
 
-.active
-{
+.active {
 	z-index: -2;
 	display: block;
 	//Animation
 	animation: scaleAnim 1s ease-in-out;
+
 	@keyframes scaleAnim {
 		0% {
 			transform: translateY(-100%) scaleY(0);
@@ -121,8 +126,7 @@ section
 	}
 }
 
-.controlls
-{
+.controlls {
 	position: fixed;
 	z-index: 10;
 	top: 50%;
@@ -132,20 +136,20 @@ section
 	align-items: center;
 	justify-content: center;
 	transform: translateY(-50%);
-	.active-btn
-	{
+
+	.active-btn {
 		background-color: var(--color-secondary) !important;
 		transition: all .4s ease-in-out;
-		i
-		{
-			color: var(--color-white) !important;
+
+		i {
+			color: #FFFFFF !important;
 		}
 	}
-	.control
-	{
+
+	.control {
 		padding: 1rem;
 		cursor: pointer;
-		background-color: var(--color-grey-4);
+		background-color: var(--color-grey-5);
 		width: 55px;
 		height: 55px;
 		border-radius: 50%;
@@ -154,6 +158,7 @@ section
 		align-items: center;
 		margin: .7rem 0;
 		box-shadow: var(--box-shadow-1);
+
 		i {
 			font-size: 1.2rem;
 			color: var(--color-grey-2);
@@ -168,14 +173,15 @@ section
 	width: 70px;
 	height: 70px;
 	border-radius: 50%;
-	background-color: var(--color-grey-4);
+	background-color: var(--color-grey-5);
 	cursor: pointer;
 	position: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	box-shadow: 0 3px 15px rgba(0,0,0,.3);
+	box-shadow: 0 3px 15px rgba(0, 0, 0, .3);
 	transition: all .1s ease-in-out;
+
 	&:active {
 		transform: translateY(-5px);
 	}
@@ -188,21 +194,24 @@ section
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	min-height: 100vh; //Fix the header size to fill all the screen
-	.left-header{
+
+	.left-header {
 		display: flex;
 		align-items: center;
 		position: relative;
+
 		.h-shape {
-			transition: all .4s ease-in-out;
 			width: 65%;
 			height: 100%;
-			background-color: var(--color-secondary);
+			background-image: var(--h-shape);
 			position: absolute;
 			left: 0;
 			top: 0;
 			z-index: -1;
 			clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+			transition: all .4s ease-in-out;
 		}
+
 		.image {
 			border-radius: var(--br-sm-2);
 			height: 90%;
@@ -210,12 +219,14 @@ section
 			margin-left: 4rem;
 			background-color: var(--color-black);
 			transition: all .4s ease-in-out;
+
 			img {
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
 				transition: all .4s ease-in-out;
 				filter: grayscale(100%);
+
 				&:hover {
 					filter: grayscale(0);
 				}
@@ -228,12 +239,15 @@ section
 		flex-direction: column;
 		justify-content: center;
 		padding-right: 18rem;
+
 		.name {
 			font-size: 3rem;
+
 			span {
 				color: var(--color-secondary);
 			}
 		}
+
 		p {
 			margin: 1.5rem 0;
 			line-height: 2rem;
@@ -247,30 +261,36 @@ section
 	grid-template-columns: repeat(2, 1fr);
 	padding-top: 3.5rem;
 	padding-bottom: 5rem;
+
 	.right-about {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 2rem;
+
 		.about-item {
 			border: 1px solid var(--color-grey-5);
 			border-radius: 5px;
 			transition: all .4s ease-in-out;
-			box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+			box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+
 			&:hover {
 				cursor: default;
 				transform: translateY(-5px);
 				border: 1px solid var(--color-secondary);
 				box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
 			}
+
 			.abt-text {
 				padding: 1.5rem;
 				display: flex;
 				flex-direction: column;
+
 				.large-text {
 					font-size: 3rem;
 					font-weight: 700;
 					color: var(--color-secondary);
 				}
+
 				.small-text {
 					padding-left: 3rem;
 					position: relative;
@@ -278,6 +298,7 @@ section
 					font-size: 1.2rem;
 					color: var(--color-grey-1);
 					letter-spacing: 2px;
+
 					&::before {
 						content: '';
 						position: absolute;
@@ -291,13 +312,16 @@ section
 			}
 		}
 	}
+
 	.left-about {
 		padding-right: 5rem;
+
 		p {
 			line-height: 2rem;
 			padding: 1rem;
 			color: var(--color-grey-1);
 		}
+
 		h4 {
 			font-size: 2rem;
 			text-transform: uppercase;
@@ -307,26 +331,31 @@ section
 
 .about-stats {
 	padding-bottom: 4rem;
+
 	.stats-skills {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 2rem;
+
 		.about-item {
 			border: 1px solid var(--color-grey-5);
 			border-radius: 5px;
 			transition: all .4s ease-in-out;
-			box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+			box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+
 			&:hover {
 				cursor: default;
 				transform: translateY(-5px);
 				border: 1px solid var(--color-secondary);
 				box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
 			}
+
 			.abt-text {
 				padding: 1.5rem;
 				display: flex;
 				flex-direction: column;
 				text-transform: uppercase;
+
 				.large-text {
 					font-size: 3rem;
 					font-weight: 700;
@@ -343,6 +372,7 @@ section
 	text-align: center;
 	padding: 3.5rem 0;
 	position: relative;
+
 	&::before {
 		content: '';
 		left: 50%;
@@ -360,10 +390,12 @@ section
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 2rem;
 	padding-bottom: 3rem;
+
 	.timeline-item {
 		position: relative;
 		padding-left: 3rem;
 		border-left: 1px solid var(--color-grey-5);
+
 		.tl-icon {
 			position: absolute;
 			left: -27px;
@@ -375,11 +407,13 @@ section
 			display: flex;
 			align-items: center;
 			justify-content: center;
+
 			i {
 				font-size: 1.3rem;
 			}
 		}
 	}
+
 	.tl-duration {
 		padding: .2rem .6rem;
 		background-color: var(--color-grey-5);
@@ -389,17 +423,20 @@ section
 		text-transform: uppercase;
 		font-weight: 500;
 	}
+
 	h5 {
 		padding: 1rem 0;
 		text-transform: uppercase;
 		font-size: 1.3rem;
 		font-weight: 600;
+
 		span {
 			color: var(--color-grey-2);
 			font-weight: 500;
 			font-size: 1.2rem;
 		}
 	}
+
 	p {
 		color: var(--color-grey-2);
 	}
@@ -416,14 +453,17 @@ section
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 2rem;
 	margin-top: 3rem;
+
 	.portfolio-item {
 		position: relative;
+
 		img {
 			width: 100%;
 			height: 300px;
 			object-fit: cover;
 			border-radius: 15px;
 		}
+
 		.hover-items {
 			width: 100%;
 			height: 100%;
@@ -439,15 +479,18 @@ section
 			opacity: 0; //hidden
 			transform: scale(0);
 			transition: all .4s ease-in-out;
+
 			h3 {
 				font-size: 1.5rem;
 				color: var(--color-white);
 				margin-bottom: 1.5rem;
 			}
+
 			.icons {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+
 				.icon {
 					background-color: var(--color-primary);
 					border-radius: 50%;
@@ -459,13 +502,16 @@ section
 					margin: 0 1rem;
 					cursor: pointer;
 					transition: all .4s ease-in-out;
+
 					i {
 						font-size: 1.5rem;
 						color: var(--color-white);
 						margin: 0 1rem;
 					}
+
 					&:hover {
 						background-color: var(--color-white);
+
 						i {
 							color: var(--color-primary);
 						}
@@ -486,30 +532,37 @@ section
 .contact-content-con {
 	display: flex;
 	padding-top: 3.5rem;
+
 	.left-contact {
 		flex: 2;
+
 		h4 {
 			margin-top: 1rem;
 			font-size: 2rem;
 			text-transform: uppercase;
 		}
+
 		p {
 			margin: 1rem 0;
 			line-height: 2rem;
 		}
+
 		.contact-info {
 			.contact-item {
 				display: flex;
 				align-items: center;
 				justify-content: space-between;
 			}
+
 			p {
 				margin: .3rem 0 !important;
 				padding: 0 !important;
 			}
+
 			.icon {
 				display: grid;
 				grid-template-columns: 40px 1fr;
+
 				i {
 					display: flex;
 					align-items: center;
@@ -517,9 +570,11 @@ section
 				}
 			}
 		}
+
 		.contact-icon {
 			display: flex;
 			margin-top: 2rem;
+
 			a {
 				display: flex;
 				align-items: center;
@@ -532,12 +587,15 @@ section
 				border-radius: 50%;
 				margin: 0 .4rem;
 				transition: all .4s ease-in-out;
+
 				&:hover {
 					background-color: var(--color-secondary);
-					i{
+
+					i {
 						color: var(--color-primary);
 					}
 				}
+
 				i {
 					display: flex;
 					align-items: center;
@@ -551,9 +609,12 @@ section
 	.right-contact {
 		flex: 3;
 		margin-left: 3rem;
+
 		.input-control {
 			margin: 1.5rem 0;
-			input, textarea {
+
+			input,
+			textarea {
 				border-radius: 30px;
 				font-weight: inherit;
 				font-size: inherit;
@@ -567,12 +628,15 @@ section
 				resize: none;
 			}
 		}
+
 		.i-c-2 {
 			display: flex;
+
 			:last-child {
 				margin-left: 1.5rem;
 			}
 		}
+
 		.submit-btn {
 			display: flex;
 			justify-content: flex-end;
@@ -587,7 +651,8 @@ section
 	display: flex;
 	align-self: flex-start;
 }
-.main-btn{
+
+.main-btn {
 	border-radius: 30px;
 	color: inherit;
 	font-weight: 600;
@@ -598,9 +663,11 @@ section
 	display: flex;
 	align-items: center;
 	overflow: hidden;
+
 	.btn-text {
 		padding: 0 2rem;
 	}
+
 	.btn-icon {
 		border-radius: 50%;
 		background-color: var(--color-secondary);
@@ -609,6 +676,7 @@ section
 		justify-content: center;
 		border: 50%;
 		padding: 1rem;
+
 		&::before {
 			content: "";
 			position: absolute;
@@ -618,6 +686,7 @@ section
 			transition: all .4s ease-in-out;
 			z-index: -1;
 		}
+
 		&:hover {
 			&::before {
 				width: 100%;
@@ -633,15 +702,18 @@ section
 
 .main-title {
 	text-align: center;
+
 	h2 {
 		position: relative;
 		text-transform: uppercase;
 		margin: 3rem;
 		font-size: 4rem;
 		font-weight: 700;
+
 		span {
 			color: var(--color-secondary);
 		}
+
 		.bg-text {
 			position: absolute;
 			top: 50%;
@@ -655,3 +727,5 @@ section
 		}
 	}
 }
+
+@import './media';
