--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,10 +1,21 @@
-@media screen and (max-width: 800px) {
+// Small screens => Smartphones
+@media screen and (max-width: 910px) {
     header {
         padding: 0;
     }
 
-    header .right-header {
-        padding: 0 !important;
+    header { 
+        .right-header {
+            padding: 0 !important;
+            margin-top: 2.5rem;
+        }
+        h1{
+            margin-right: 3rem;
+        }
+    }
+
+    .section {
+        padding: 2rem 3rem;
     }
 
     .theme-btn {
@@ -66,6 +77,8 @@
     .about-stats {
         .stats-skills {
             grid-template-columns: 1fr;
+            justify-content: center;
+            align-items: center;
             .about-item {
                 .abt-text {
                     text-align: center;
@@ -96,18 +109,15 @@
     }
     // === CONTACT ===
 
-    .section {
-        padding: 2rem 2.5rem;
-    }
 
     .main-title {
-        h3 {
+        h2 {
             font-size: 2rem;
             span {
                 font-size: 2.5rem;
             }
             .bg-text {
-                font-size: 3rem;
+                font-size: 3.5rem;
             }
         }
     }
@@ -127,6 +137,20 @@
 
         }
     }
+
+    #text-contact {
+        line-height: 2.5rem;
+    }
+
+    .contact-info {
+        .contact-item {
+            display: inline !important;
+            padding: 1rem;
+            p {
+                margin-left: 5rem;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1430px) {
@@ -134,9 +158,9 @@
     header{
         padding: 0 !important;
     }
-    .section {
-        padding: 2.5rem 9rem;
-    }
+    // .section {
+    //     padding: 2.5rem 9rem;
+    // }
 
     // === CONTACT ===
     .contact-content-con {
@@ -166,7 +190,7 @@
     }
 }
 
-@media screen and (max-width: 1100px) and (min-width: 800px) {
+@media screen and (max-width: 1230px) and (min-width: 800px) {
 
     .about-container {
         grid-template-columns: 1fr;
@@ -182,13 +206,21 @@
                 font-size: 4rem;
             }
             .bg-text {
-                font-size: 4.5rem;
+                font-size: 6rem;
             }
         }
     }
 
     .portfolios {
         grid-template-columns: 1fr 1fr;
+    }
+
+    .sec2 {
+        padding: 2rem 8rem;
+    }
+
+    #portfolio {
+        padding: 2rem 8rem;
     }
 
     .about-stats .stats-skills {
