--- a/styles/styles.css
+++ b/styles/styles.css
@@ -638,7 +638,7 @@ section {
   z-index: -1;
   transform: translate(-50%, -50%);
   font-weight: 1000;
-  font-size: 6.3rem;
+  font-size: 4.5rem;
 }
 
 #text-contact {
@@ -646,12 +646,19 @@ section {
   margin-bottom: 2.5rem;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 910px) {
   header {
     padding: 0;
   }
   header .right-header {
     padding: 0 !important;
+    margin-top: 2.5rem;
+  }
+  header h1 {
+    margin-right: 3rem;
+  }
+  .section {
+    padding: 2rem 3rem;
   }
   .theme-btn {
     width: 50px;
@@ -695,6 +702,8 @@ section {
   }
   .about-stats .stats-skills {
     grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
   }
   .about-stats .stats-skills .about-item .abt-text {
     text-align: center;
@@ -717,17 +726,14 @@ section {
     margin-left: 0;
     margin-top: 1.5rem;
   }
-  .section {
-    padding: 2rem 2.5rem;
-  }
-  .main-title h3 {
+  .main-title h2 {
     font-size: 2rem;
   }
-  .main-title h3 span {
+  .main-title h2 span {
     font-size: 2.5rem;
   }
-  .main-title h3 .bg-text {
-    font-size: 3rem;
+  .main-title h2 .bg-text {
+    font-size: 3.5rem;
   }
   .controlls {
     top: auto;
@@ -742,13 +748,20 @@ section {
   .controlls .control {
     margin: 0.6rem 1rem !important;
   }
+  #text-contact {
+    line-height: 2.5rem;
+  }
+  .contact-info .contact-item {
+    display: inline !important;
+    padding: 1rem;
+  }
+  .contact-info .contact-item p {
+    margin-left: 5rem;
+  }
 }
 @media screen and (max-width: 1430px) {
   header {
     padding: 0 !important;
-  }
-  .section {
-    padding: 2.5rem 9rem;
   }
   .contact-content-con {
     flex-direction: column;
@@ -773,7 +786,7 @@ section {
     padding-right: 8rem;
   }
 }
-@media screen and (max-width: 1100px) and (min-width: 800px) {
+@media screen and (max-width: 1230px) and (min-width: 800px) {
   .about-container {
     grid-template-columns: 1fr;
   }
@@ -787,10 +800,16 @@ section {
     font-size: 4rem;
   }
   .main-title h2 .bg-text {
-    font-size: 4.5rem;
+    font-size: 6rem;
   }
   .portfolios {
     grid-template-columns: 1fr 1fr;
+  }
+  .sec2 {
+    padding: 2rem 8rem;
+  }
+  #portfolio {
+    padding: 2rem 8rem;
   }
   .about-stats .stats-skills {
     grid-template-columns: 1fr 1fr;
